fixed date issue and reorganized dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,19 +8,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="{{ url_for('static', filename = 'js/jquery.csv.min.js') }}"></script>
-
+<script src="../static/js/dashboard.js"></script>
 <!--
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 -->
-
-<body>
-    <h2 style="text-align: center;">
-        Potential Issues
-    </h2>
-    <div class="points"></div>
-</body>
 
 <style>
 .points-row {
@@ -47,61 +40,11 @@
 }
 </style>
 
-<script>
-
-$(document).ready(function() {
-
-    // const test_url = "http://energycomps.its.carleton.edu/api/anomalies/vent-and-temp?start_time=1636478378&end_time=1636564778&vent=30&temp=75"
-    const BASE_URL = "http://energycomps.its.carleton.edu/api";
-
-    // const now = new Date()
-    var end_time = "1636564778"; // the current time minus 24 hours? 1 week?
-    var start_time = "1636478378"; // the current time
-    var temp = "75"
-    var vent = "30";
-
-    var api_url = BASE_URL + "/anomalies/vent-and-temp";
-    api_url = api_url + "?start_time=" + start_time;
-    api_url = api_url + "&end_time=" + end_time;
-    api_url = api_url + "&vent=" + vent;
-    api_url = api_url + "&temp=" + temp;
-
-    $.ajax({
-    type: "GET",
-    dataType: "json",
-    url: api_url,
-    cache: false,
-    success: function (data) {
-        if (jQuery.isEmptyObject(data)) {
-            var empty = "<div class=\"empty\">";
-            empty += "<p> No anomolies detected! Hurray! </p>"
-            empty += "</div>"
-            $(".points").append(empty);
-        } else {
-            $.each(data, function(key, value) {
-                var row = "<div class=\"points-row\">";
-                row += "Temp/Vent Mismatch in " + key + "<br>";
-                row += "<div class=\"show-more\">";
-                row += "Points of Concern: " + value.temp_name + ", " + value.damper_name + "<br>";
-                var min_reading = Math.min.apply(Math, value.values.timestamp)
-                var first_reading = new Date(min_reading).toLocaleTimeString("en-US")
-                row += "Time of First Anamolous Readings: " + first_reading + "<br>";
-                var max_reading = Math.max.apply(Math, value.values.timestamp)
-                var last_reading = new Date(max_reading).toLocaleTimeString("en-US")
-                row += "Time of Most Recent Anamolous Reading: " + last_reading;
-                row += "</div>";
-                row += "</div>";
-                $(".points").append(row)
-            });
-        }
-    }
-    });
-});
-
-$(document).on('click', '.points-row', function (){
-    $(this).children().toggle();
-});
-
-</script>
+<body>
+    <h2 style="text-align: center;">
+        Potential Issues
+    </h2>
+    <div class="points"></div>
+</body>
 
 {% endblock %}
