--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,7 +49,7 @@
         <thead>
             <tr>
                 <th scope="col">Room</th>
-                <th scope="col">Date & Time</th>
+                <th title="Time Range of Anomalous Readings" scope="col">Date & Time</th>
                 <th scope="col">Room Temperature</th>
                 <th scope="col">Damper Percentage</th>
             </tr>
